# task-manager

./: .gitignore  README.md  main.py  pyproject.toml  sql_app.db  sql_app.db-journal
alembic/versions/: 531c27292f41_create_tables_and_data.py  531c27292f41_create_user_table.py  531c27292f41_create_username_column.py  efe070d1e59c_initial_migration.py
handlers/: tasks.py  users.py
models/: history.py  task.py  user.py
pydantic_schemas/: schemas.py
